- issues 変数化 - cloudinary化

--- a/contents/posts/markdown/2020-01-01_sample-md.md
+++ b/contents/posts/markdown/2020-01-01_sample-md.md
@@ -5,7 +5,7 @@ created_at: 2020-01-01
 updated_at: 2020-01-02
 draft: false
 description: Nuxt.jsでつくったブログのテンプレート
-ogimage: imgのパス
+ogImage: xxx.png
 tags: JavaScript,Nuxt.js
 ---
 
